<resources>
    <string name="app_name">纽扣课程表</string>
    <string name="thur">Thur</string>
    <string name="title">课程表</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="fri">Fri</string>
    <string name="button">Button</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="mon">Mon</string>
    <string name="blank" />
</resources>
